--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/silversonicaxel/gherkin-detailer"
+  },
+  "engines": {
+    "node": ">=10.5.0",
+    "npm": ">= 6.0.0"
   }
 }
