--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+      "lib": [ "es7", "dom" ],
       "target": "es6",
       "module": "commonjs",
       "outDir": "dist",
