--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "license": "MIT",
   "scripts": {
     "lint": "tslint src/**/*.ts",
-    "test": "node node_modules/.bin/_mocha -r ts-node/register ./src/**/*.spec.ts",
-    "test-watch": "node node_modules/.bin/_mocha -r ts-node/register --watch-extensions spec.ts ./src/**/*.spec.ts --watch -R min"
+    "test": "node node_modules/.bin/_mocha --opts ./mocha.opts",
+    "test-watch": "node node_modules/.bin/_mocha --watch-extensions spec.ts --watch -R min --opts ./mocha.opts",
+    "test-coverage": "node node_modules/nyc/bin/nyc node node_modules/.bin/_mocha --opts ./mocha.opts",
+    "test-report": "node node_modules/nyc/bin/nyc report"
   },
   "author": {
     "name": "Alessandro (silversonicaxel) Rabitti",
@@ -25,9 +27,38 @@
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.0",
     "chai": "^4.2.0",
+    "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
+    "nyc": "^13.1.0",
+    "source-map-support": "^0.5.9",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "typescript": "^3.1.3"
+  },
+  "nyc": {
+    "include": [
+      "src/**/*.ts"
+    ],
+    "exclude": [
+      "src/**/*.spec.ts"
+    ],
+    "extension": [
+      ".ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ],
+    "reporter": [
+      "text-summary",
+      "html"
+    ],
+    "check-coverage": true,
+    "all": true,
+    "sourceMap": true,
+    "instrument": true,
+    "lines": 50,
+    "statements": 50,
+    "functions": 50,
+    "branches": 50
   }
 }
