--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "tslint src/**/*.ts",
     "test": "node node_modules/.bin/_mocha --opts ./mocha.opts",
-    "test-watch": "node node_modules/.bin/_mocha --watch-extensions spec.ts --watch -R min --opts ./mocha.opts",
+    "test-watch": "node node_modules/.bin/_mocha --watch-extensions spec.ts --watch --opts ./mocha.opts",
     "pre-test-coverage": "mkdir -p fixtures/features/empty-folder/",
     "test-coverage": "npm run pre-test-coverage && node node_modules/nyc/bin/nyc node node_modules/.bin/_mocha --opts ./mocha.opts",
     "test-report": "node node_modules/nyc/bin/nyc report"
