Update tsconfig to exclude unit tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,11 @@
       "moduleResolution": "node"
   },
   "exclude": [
-      "node_modules"
+      "node_modules",
+      "**/*.spec.ts",
   ],
   "include": [
-      "src/**/*"    
+      "src/**/*"
   ],
   "compileOnSave": true
 }
