Install mustache for templating

--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.5",
+    "@types/mustache": "^0.8.32",
     "@types/node": "^10.12.12",
     "@types/sinon": "^5.0.7",
     "@types/sinon-chai": "^3.2.1",
     "chai": "^4.2.0",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
+    "mustache": "^3.0.1",
     "nyc": "^13.1.0",
     "sinon": "^7.2.0",
     "sinon-chai": "^3.3.0",
