--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
+    "@types/del": "^3.0.1",
     "@types/mocha": "^5.2.5",
     "@types/mustache": "^0.8.32",
     "@types/node": "^10.12.15",
     "@types/sinon": "^7.0.0",
     "@types/sinon-chai": "^3.2.2",
     "chai": "^4.2.0",
+    "del": "^3.0.0",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "mustache": "^3.0.1",
