--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test-watch": "node node_modules/.bin/_mocha --watch-extensions spec.ts --watch --opts ./mocha.opts",
     "pre-test-coverage": "mkdir -p fixtures/features/empty-folder/",
     "test-coverage": "npm run pre-test-coverage && node node_modules/nyc/bin/nyc node node_modules/.bin/_mocha --opts ./mocha.opts",
-    "test-report": "node node_modules/nyc/bin/nyc report"
+    "test-report": "node node_modules/nyc/bin/nyc report",
+    "coveralls": "node node_modules/nyc/bin/nyc report --reporter=lcov && cat ./coverage/lcov.info | node node_modules/coveralls/bin/coveralls"
   },
   "author": {
     "name": "Alessandro (silversonicaxel) Rabitti",
@@ -32,6 +33,7 @@
     "@types/sinon": "^7.0.0",
     "@types/sinon-chai": "^3.2.2",
     "chai": "^4.2.0",
+    "coveralls": "^3.0.2",
     "del": "^3.0.0",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
