--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "pre-test-coverage": "mkdir -p fixtures/features/empty-folder/",
     "test-coverage": "npm run pre-test-coverage && node node_modules/nyc/bin/nyc node node_modules/.bin/_mocha --opts ./mocha.opts",
     "test-report": "node node_modules/nyc/bin/nyc report",
-    "coveralls": "node node_modules/nyc/bin/nyc report --reporter=lcov && cat ./coverage/lcov.info | node node_modules/coveralls/bin/coveralls"
+    "coveralls": "node node_modules/nyc/bin/nyc report --reporter=lcov && cat ./coverage/lcov.info | node node_modules/coveralls/bin/coveralls",
+    "clean": "rm -rf dist",
+    "build": "npm run clean; tsc -p tsconfig.build.json"
   },
   "author": {
     "name": "Alessandro (silversonicaxel) Rabitti",
