--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "del": "^3.0.0",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
+    "moment": "^2.23.0",
     "mustache": "^3.0.1",
     "nyc": "^13.1.0",
     "sinon": "^7.2.2",
