Fix coveralls issue

--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     ],
     "check-coverage": true,
     "all": true,
-    "sourceMap": true,
+    "sourceMap": false,
+    "cache": true,
     "instrument": true,
     "lines": 95,
     "statements": 95,
