--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
       "outDir": "dist",
       "strict": true,
       "noImplicitAny": true,
-      "moduleResolution": "node"
+      "moduleResolution": "node",
+      "inlineSourceMap": true
   },
   "exclude": [
       "node_modules",
