Revert source-map-support/register in package.json for nyc

--- a/package.json
+++ b/package.json
@@ -60,8 +60,7 @@
       ".ts"
     ],
     "require": [
-      "ts-node/register",
-      "source-map-support/register"
+      "ts-node/register"
     ],
     "reporter": [
       "html",
