--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "chai": "^4.2.0",
     "coveralls": "^3.0.2",
     "del": "^3.0.0",
-    "istanbul": "^0.4.5",
+    "istanbul": "1.1.0-alpha.1",
     "mocha": "^5.2.0",
     "moment": "^2.23.0",
     "mustache": "^3.0.1",
@@ -68,7 +68,7 @@
     ],
     "check-coverage": true,
     "all": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "cache": true,
     "instrument": true,
     "lines": 95,
