--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
 language: node_js
 node_js:
+  - 8
+  - 9
+  - 10
   - node
+script:
+  - yarn run lint
+  - yarn run test
+  - yarn run test-coverage
 after_success:
-  - npm run coveralls
+  - yarn run coveralls
