--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clean": "rm -rf dist",
     "build": "npm run clean; tsc -p tsconfig.build.json"
   },
+  "main": "dist/index.js",
   "author": {
     "name": "Alessandro (silversonicaxel) Rabitti",
     "url": "https://github.com/silversonicaxel"
