Update coverage scripts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
       "strict": true,
       "noImplicitAny": true,
       "moduleResolution": "node",
-      "inlineSourceMap": false
+      "sourceMap": true
   },
   "exclude": [
       "node_modules",
