--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "license": "MIT",
   "scripts": {
     "lint": "tslint src/**/*.ts",
-    "test": "node node_modules/.bin/_mocha --opts ./mocha.opts",
-    "test-watch": "node node_modules/.bin/_mocha --watch-extensions spec.ts --watch --opts ./mocha.opts",
-    "pre-test-coverage": "mkdir -p fixtures/features/empty-folder/",
-    "test-coverage": "npm run pre-test-coverage && node node_modules/nyc/bin/nyc node node_modules/.bin/_mocha --opts ./mocha.opts",
-    "test-report": "node node_modules/nyc/bin/nyc report",
-    "coveralls": "node node_modules/nyc/bin/nyc npm test && node node_modules/nyc/bin/nyc report --reporter=text-lcov | node node_modules/coveralls/bin/coveralls",
+    "pre-test": "mkdir -p fixtures/features/empty-folder/",
+    "test": "npm run pre-test && node node_modules/.bin/_mocha --opts ./mocha.opts",
+    "test-watch": "npm run pre-test && node node_modules/.bin/_mocha --watch-extensions spec.ts --watch --opts ./mocha.opts",
+    "test-coverage": "npm run pre-test && node node_modules/nyc/bin/nyc node node_modules/.bin/_mocha --opts ./mocha.opts",
+    "coveralls": "node node_modules/nyc/bin/nyc npm run test && node node_modules/nyc/bin/nyc report --reporter=text-lcov | node node_modules/coveralls/bin/coveralls",
     "clean": "rm -rf dist",
     "build": "npm run clean; tsc -p tsconfig.build.json"
   },
@@ -65,12 +64,15 @@
     ],
     "reporter": [
       "html",
-      "text-lcov"
+      "lcov",
+      "text",
+      "text-summary"
     ],
-    "check-coverage": true,
+    "report-dir": "coverage/",
     "all": true,
-    "sourceMap": false,
-    "cache": true,
+    "check-coverage": true,
+    "sourceMap": true,
+    "cache": false,
     "instrument": true,
     "lines": 95,
     "statements": 95,
