Remove text-summary from reporter configurations

--- a/package.json
+++ b/package.json
@@ -65,8 +65,7 @@
     "reporter": [
       "html",
       "lcov",
-      "text",
-      "text-summary"
+      "text"
     ],
     "report-dir": "coverage/",
     "all": true,
