--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/sinon": "^7.0.5",
     "@types/sinon-chai": "^3.2.2",
     "chai": "^4.2.0",
+    "commander": "^2.19.0",
     "coveralls": "^3.0.2",
     "del": "^3.0.0",
     "istanbul": "1.1.0-alpha.1",
