--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "build": "npm run clean; tsc -p tsconfig.build.json"
   },
   "main": "dist/index.js",
+  "bin": {
+    "gherkin-detailer": "dist/index.js"
+  },
   "author": {
     "name": "Alessandro (silversonicaxel) Rabitti",
     "url": "https://github.com/silversonicaxel"
