--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test-coverage": "npm run pre-test && node node_modules/nyc/bin/nyc node node_modules/.bin/_mocha --opts ./mocha.opts",
     "coveralls": "node node_modules/nyc/bin/nyc npm run test && node node_modules/nyc/bin/nyc report --reporter=text-lcov | node node_modules/coveralls/bin/coveralls",
     "clean": "rm -rf dist",
-    "build": "npm run clean; tsc -p tsconfig.build.json"
+    "pre-build": "mkdir -p dist/templates; cp src/templates/* dist/templates",
+    "build": "npm run clean; npm run pre-build; tsc -p tsconfig.build.json"
   },
   "main": "dist/index.js",
   "bin": {
