--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gherkin-detailer",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "gherkin-detailer is a tool that check the gherkins included in you project and list them",
   "license": "MIT",
   "scripts": {
@@ -11,9 +11,9 @@
     "test-coverage": "npm run pre-test && node node_modules/nyc/bin/nyc node node_modules/.bin/_mocha --opts ./mocha.opts",
     "coveralls": "node node_modules/nyc/bin/nyc npm run test && node node_modules/nyc/bin/nyc report --reporter=text-lcov | node node_modules/coveralls/bin/coveralls",
     "clean": "rm -rf dist",
-    "pre-build": "mkdir -p dist/templates; cp src/templates/* dist/templates",
-    "build": "npm run clean; npm run pre-build; tsc -p tsconfig.build.json",
-    "postinstall": "npm run build"
+    "prepare-dist": "mkdir -p dist/templates; cp src/templates/* dist/templates",
+    "build": "npm run clean; npm run prepare-dist; tsc -p tsconfig.build.json",
+    "postinstall": "npm run prepare-dist"
   },
   "main": "dist/index.js",
   "bin": {
