--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/sinon-chai": "^3.2.2",
     "chai": "^4.2.0",
     "coveralls": "^3.0.2",
+    "gitbook-cli": "^2.3.2",
     "istanbul": "1.1.0-alpha.1",
     "mocha": "^5.2.0",
     "nyc": "^13.2.0",
