--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "type": "git",
     "url": "https://github.com/silversonicaxel/gherkin-detailer"
   },
+  "homepage": "https://github.com/silversonicaxel/gherkin-detailer#readme",
+  "bugs": {
+    "url": "https://github.com/silversonicaxel/gherkin-detailer/issues"
+  },
   "engines": {
     "node": ">=10.12.0",
     "npm": ">= 6.0.0"
