--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "commander": "^2.20.0",
     "del": "^4.1.0",
     "moment": "^2.24.0",
-    "mustache": "^3.0.1"
+    "mustache": "^3.0.1",
+    "string-similarity": "^3.0.0"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
