--- a/package.json
+++ b/package.json
@@ -48,22 +48,23 @@
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/del": "^4.0.0",
+    "@types/glob": "^7.1.1",
     "@types/mocha": "^5.2.6",
-    "@types/node": "^11.13.4",
+    "@types/node": "^11.13.6",
     "@types/sinon": "^7.0.11",
     "@types/sinon-chai": "^3.2.2",
     "chai": "^4.2.0",
     "coveralls": "^3.0.3",
     "gitbook-cli": "^2.3.2",
     "istanbul": "1.1.0-alpha.1",
-    "mocha": "^6.1.3",
-    "nyc": "^13.3.0",
-    "sinon": "^7.3.1",
+    "mocha": "^6.1.4",
+    "nyc": "^14.0.0",
+    "sinon": "^7.3.2",
     "sinon-chai": "^3.3.0",
     "source-map-support": "^0.5.12",
     "ts-node": "^8.1.0",
-    "tslint": "^5.15.0",
-    "typescript": "^3.4.3"
+    "tslint": "^5.16.0",
+    "typescript": "^3.4.4"
   },
   "nyc": {
     "include": [
