--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gherkin-detailer",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "gherkin-detailer is a tool that check the gherkins included in you project and lists them, highlights their similarities.",
   "license": "MIT",
   "scripts": {
@@ -29,7 +29,7 @@
     "type": "git",
     "url": "https://github.com/silversonicaxel/gherkin-detailer"
   },
-  "homepage": "https://github.com/silversonicaxel/gherkin-detailer#readme",
+  "homepage": "https://silversonicaxel.gitbook.io/gherkin-detailer/",
   "bugs": {
     "url": "https://github.com/silversonicaxel/gherkin-detailer/issues"
   },
