--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "lint": "tslint src/**/*.ts",
     "pre-test": "mkdir -p fixtures/features/empty-folder/",
-    "test": "npm run pre-test && _mocha --opts ./mocha.opts",
-    "test-watch": "npm run pre-test && _mocha --watch-extensions spec.ts --watch --opts ./mocha.opts",
-    "test-coverage": "npm run pre-test && nyc _mocha --opts ./mocha.opts",
+    "test": "npm run pre-test && mocha --config=./mocharc.json",
+    "test-watch": "npm run pre-test && mocha --config=./mocharc.json",
+    "test-coverage": "npm run pre-test && nyc mocha --config=./mocharc.json",
     "coveralls": "nyc npm run test && nyc report --reporter=text-lcov | coveralls",
     "clean": "rm -rf dist",
     "prepare-dist": "mkdir -p dist/templates; cp src/templates/* dist/templates",
@@ -39,33 +39,33 @@
   },
   "dependencies": {
     "@types/fuzzyset.js": "^0.0.2",
-    "@types/mustache": "^4.0.1",
-    "commander": "^5.1.0",
-    "del": "^5.1.0",
-    "fuzzyset.js": "^1.0.5",
-    "moment": "^2.25.3",
-    "mustache": "^4.0.1"
+    "@types/mustache": "^4.1.1",
+    "commander": "^7.0.0",
+    "del": "^6.0.0",
+    "fuzzyset.js": "^1.0.6",
+    "moment": "^2.29.1",
+    "mustache": "^4.1.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.11",
+    "@types/chai": "^4.2.14",
     "@types/del": "^4.0.0",
-    "@types/glob": "^7.1.1",
-    "@types/mocha": "^7.0.2",
-    "@types/node": "^14.0.1",
-    "@types/sinon": "^9.0.0",
-    "@types/sinon-chai": "^3.2.4",
+    "@types/glob": "^7.1.3",
+    "@types/mocha": "^8.2.0",
+    "@types/node": "^14.14.22",
+    "@types/sinon": "^9.0.10",
+    "@types/sinon-chai": "^3.2.5",
     "chai": "^4.2.0",
     "coveralls": "^3.1.0",
     "gitbook-cli": "^2.3.2",
     "istanbul": "1.1.0-alpha.1",
-    "mocha": "^7.1.2",
-    "nyc": "^15.0.1",
-    "sinon": "^9.0.2",
+    "mocha": "^8.2.1",
+    "nyc": "^15.1.0",
+    "sinon": "^9.2.4",
     "sinon-chai": "^3.5.0",
     "source-map-support": "^0.5.19",
-    "ts-node": "^8.10.1",
+    "ts-node": "^9.1.1",
     "tslint": "^6.1.2",
-    "typescript": "^3.9.2"
+    "typescript": "^4.1.3"
   },
   "nyc": {
     "include": [
