--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,20 @@
 {
+  "compileOnSave": true,
   "compilerOptions": {
-      "lib": [ "es7", "dom" ],
-      "target": "es6",
-      "module": "commonjs",
-      "outDir": "dist",
-      "strict": true,
-      "noImplicitAny": true,
-      "moduleResolution": "node",
-      "sourceMap": true
+    "lib": [ "es7", "dom" ],
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "noImplicitAny": true,
+    "outDir": "dist",
+    "sourceMap": true,
+    "strict": true,
+    "target": "es6"
   },
   "exclude": [
-      "node_modules",
-      "**/*.spec.ts",
+    "node_modules",
+    "**/*.spec.ts",
   ],
   "include": [
-      "src/**/*"
-  ],
-  "compileOnSave": true
+    "src/**/*"
+  ]
 }
