--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "gherkin-detailer is a tool that check the gherkins included in you project and lists them, highlights their similarities.",
   "license": "MIT",
   "scripts": {
-    "lint": "tslint src/**/*.ts",
+    "lint": "eslint src/ --ext .ts",
     "pre-test": "mkdir -p fixtures/features/empty-folder/",
     "test": "npm run pre-test && mocha --config=./mocharc.json",
     "test-watch": "npm run pre-test && mocha --config=./mocharc.json",
-    "test-coverage": "npm run pre-test && nyc mocha --config=./mocharc.json",
-    "coveralls": "nyc npm run test && nyc report --reporter=text-lcov | coveralls",
     "clean": "rm -rf dist",
     "prepare-dist": "mkdir -p dist/templates; cp src/templates/* dist/templates",
     "build": "npm run clean; npm run prepare-dist; tsc -p tsconfig.build.json",
@@ -17,6 +15,7 @@
     "serve-doc": "gitbook serve . docs",
     "build-doc": "gitbook build . docs"
   },
+  "type": "module",
   "main": "dist/index.js",
   "bin": {
     "gherkin-detailer": "dist/index.js"
@@ -38,63 +37,34 @@
     "npm": ">= 6.0.0"
   },
   "dependencies": {
-    "@types/fuzzyset.js": "^0.0.2",
-    "@types/mustache": "^4.1.1",
-    "commander": "^7.2.0",
-    "del": "^6.0.0",
-    "fuzzyset.js": "^1.0.6",
-    "moment": "^2.29.1",
+    "commander": "^12.1.0",
+    "del": "^7.1.0",
+    "fuzzyset.js": "^1.0.7",
+    "moment": "^2.30.1",
     "mustache": "^4.2.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.16",
+    "@types/chai": "^4.3.16",
     "@types/del": "^4.0.0",
-    "@types/glob": "^7.1.3",
-    "@types/mocha": "^8.2.2",
-    "@types/node": "^14.14.41",
-    "@types/sinon": "^10.0.0",
-    "@types/sinon-chai": "^3.2.5",
-    "chai": "^4.3.4",
-    "coveralls": "^3.1.0",
+    "@types/fuzzyset.js": "^0.0.5",
+    "@types/glob": "^8.1.0",
+    "@types/mocha": "^10.0.7",
+    "@types/mustache": "^4.2.5",
+    "@types/node": "^20.14.9",
+    "@types/sinon": "^17.0.3",
+    "@types/sinon-chai": "^3.2.12",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
+    "@typescript-eslint/parser": "^7.10.0",
+    "chai": "^5.1.1",
+    "eslint": "^8.57.0",
     "gitbook-cli": "^2.3.2",
-    "istanbul": "1.1.0-alpha.1",
-    "mocha": "^8.3.2",
-    "nyc": "^15.1.0",
-    "sinon": "^10.0.0",
-    "sinon-chai": "^3.6.0",
-    "source-map-support": "^0.5.19",
-    "ts-node": "^9.1.1",
+    "mocha": "^10.6.0",
+    "sinon": "^18.0.0",
+    "sinon-chai": "^3.7.0",
+    "source-map-support": "^0.5.21",
+    "ts-node": "^10.9.2",
     "tslint": "^6.1.2",
-    "typescript": "^4.2.4"
-  },
-  "nyc": {
-    "include": [
-      "src/class/**/*.ts"
-    ],
-    "exclude": [
-      "src/**/*.spec.ts"
-    ],
-    "extension": [
-      ".ts"
-    ],
-    "require": [
-      "ts-node/register"
-    ],
-    "reporter": [
-      "html",
-      "lcov",
-      "text"
-    ],
-    "report-dir": "coverage/",
-    "all": true,
-    "check-coverage": true,
-    "sourceMap": true,
-    "cache": false,
-    "instrument": true,
-    "lines": 95,
-    "statements": 95,
-    "functions": 95,
-    "branches": 95
+    "typescript": "^5.5.3"
   },
   "keywords": [
     "gherkin-detailer",
